[package]
name = "dbgr"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
env_logger = "0.9.0"
gimli = "0.26.1"
hex = "0.4.3"
memmap2 = "0.5.5"
nix = "0.24.1"
object = "0.29.0"
once_cell = "1.13.0"
proc-maps = "0.2.1"
symbolic = { version = "9.1.1", default-features = false, features = [
    "demangle",
] }
syscalls = "0.6.3"

[build-dependencies]
bindgen = "0.60.1"
cc = "1.0.73"
